# msu.supercomputers.course

./: README.md
parallel-hw1-05/src/: main.cpp
parallel-hw2-03/: .gitignore  README.md
parallel-hw2-03/parallel-mpi/: CMakeLists.txt  Makefile  border_conditions.h  main.cpp  process_split.h  send_recv_mpi.h  timer.h  utils.h
parallel-hw2-03/parallel-mpi-cuda/: border_conditions.h  main.cu  send_recv_mpi.h  slice_operations.h  timer.h  utils.h
parallel-hw2-03/parallel-mpi-omp/: Makefile  border_conditions.h  main.cpp  send_recv_mpi.h  timer.h  utils.h
parallel-hw2-03/parallel-no/: CMakeLists.txt  Makefile  main.cpp
parallel-hw2-03/plots/: plot_2d.ipynb  plot_3d.ipynb  plot_4d.ipynb
